--- a/note/templates/add_note.html
+++ b/note/templates/add_note.html
@@ -14,6 +14,11 @@
        <input type="file" name="file" id="picpath" style="display:none;width:0px" onChange="document.form1.path.value=this.value">
        <input name="path" readonly>
        <input type="button" value="上传附件" onclick="document.form1.file.click()">&nbsp;&nbsp;&nbsp;&nbsp;
-       <br><input type="submit" value="点击保存">
+         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+       <input type="submit" value="点击保存">
     </form>
 {% endblock replace_body %}
