--- a/note/templates/modify_note.html
+++ b/note/templates/modify_note.html
@@ -7,7 +7,8 @@
 {% block replace_body %}
      <form action="/note/modify_note/{{ id }}" name="form2" method="post" enctype="multipart/form-data">
         {% csrf_token%}
-       <span>标题:&nbsp;&nbsp;</span><input type="text" name="title" value="{{title}}" ><br><br>
+       <span>标题:&nbsp;&nbsp;</span><input type="text" name="title" value="{{title}}" ><br><br><span>创建时间:{{ createtime }}</span>&nbsp;&nbsp;&nbsp;&nbsp;
+        <span>最近修改时间:{{ modifytime }}</span><br><br>
        <span style="color:yellow;height:30px;">内容:</span><br>
        <textarea name="content" >{{content}}</textarea>
         <br>
@@ -19,10 +20,13 @@
               <input type="file" name="upfile" id="picpath1" style="display:none;width:0px"
                      onChange="document.form2.path.value=this.value">
               <input name="path" readonly>
-              <input type="button" value="上传附件" onclick="document.form2.upfile.click()"><br>
+              <input type="button" value="上传附件" onclick="document.form2.upfile.click()">
          {% endif %}
 
-       <br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <input type="submit" value="确认修改">
     </form>
 {% endblock replace_body %}
